<resources>
    <string name="app_name">TrainTicks</string>
    <string name="nh_p_s_i_n_tho_i">Nhập số điện thoại</string>
    <string name="nh_p_m_t_kh_u">Nhập mật khẩu</string>
    <string name="ng_nh_p">Đăng nhập</string>
    <string name="ng_k">Đăng ký</string>
    <string name="ga_i">Ga đi</string>
    <string name="ch_n_ga_i">Chọn ga đi</string>
    <string name="ga_n">Ga đến</string>
    <string name="ch_n_ga_n">Chọn ga đến</string>
    <string name="mua_v_t_u">Mua vé tàu</string>
    <string name="t_v_t_u">Đặt vé tàu</string>
    <string name="ch_n_ng_y_i">Chọn ngày đi</string>
    <string name="ch_n_ng_y_v">Chọn ngày về</string>
    <string name="nh_p_t_n_c_a_b_n">Nhập tên của bạn</string>
    <string name="nh_p_s_cmnd">Nhập số CMND</string>
    <string name="nh_p_email">Nhập email</string>
    <string name="inputphone">Nhập số điện thoại</string>
    <string name="ng_y_sinh">Ngày sinh</string>
    <string name="th_ng_tin_c_nh_n">Thông tin cá nhân</string>
</resources>