<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F0F0"
    tools:context=".ui.fragment.home.HomeFragment">

    <TextView
        android:id="@+id/mTVHome"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/bacground"
        android:gravity="center"
        android:text="@string/mua_v_t_u"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/mIVHome"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:layout_below="@id/mTVHome"
        android:scaleType="centerCrop"
        android:src="@drawable/imagehome" />

    <LinearLayout
        android:id="@+id/mLLChoose"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:layout_below="@id/mIVHome"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:background="#fff"
        android:baselineAligned="false"
        android:padding="@dimen/_10sdp"
        android:weightSum="2">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ga_i" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/ch_n_ga_i"
                android:textSize="25sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="0.01dp"
            android:layout_height="match_parent"
            android:background="@color/bacground"
            tools:ignore="Suspicious0dp" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/ga_n" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|end"
                android:text="@string/ch_n_ga_n"
                android:textSize="25sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mLLTime"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_below="@id/mLLChoose"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mDaysToGo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Chọn loại tàu"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mLLTime"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/btn_login"
        android:padding="@dimen/_5sdp"
        android:text="@string/t_v_t_u"
        android:textSize="17sp" />
</RelativeLayout>