<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@null"
    tools:context=".ui.register.RegisterActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/mABL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_login">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:background="@null"
            android:fitsSystemWindows="true"
            app:layout_collapseMode="parallax"
            app:layout_scrollFlags="scroll|enterAlways" />

        <TextView
            android:id="@+id/mTVHello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_25sdp"
            android:layout_marginBottom="9dp"
            android:background="@null"
            android:padding="@dimen/_10sdp"
            android:text="Good Morning, Register to Train Ticks"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_collapseMode="pin" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/mEDTName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="@dimen/_20sdp"
                android:hint="@string/nh_p_t_n_c_a_b_n" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/mEDTCMND"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/mEDTName"
                android:layout_marginTop="@dimen/_20sdp"
                android:hint="@string/nh_p_s_cmnd" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/mEDTEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/mEDTCMND"
                android:layout_marginTop="@dimen/_20sdp"
                android:hint="@string/nh_p_email" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/mEDTPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/mEDTEmail"
                android:layout_marginTop="@dimen/_20sdp"
                android:hint="@string/inputphone" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/mEDTBirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/mEDTPhone"
                android:layout_marginTop="@dimen/_20sdp"
                android:hint="@string/ng_y_sinh" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/mEDTPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/mEDTBirthday"
                android:layout_marginTop="@dimen/_20sdp"
                android:hint="Nhập mật khẩu"
                android:inputType="textPassword"
                android:password="true" />

            <Button
                android:background="@drawable/btn_login"
                android:layout_marginBottom="@dimen/_40sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/mEDTPassword"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="Đăng ký" />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>